--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{Zhou2021ToxicDebias,
+            author={Xuhui Zhou, Maarten Sap, Swabha Swayamdipta, Noah A. Smith and Yejin Choi},
+            title={Challenges in Automated Debiasing for Toxic Language Detection},
+            booktitle={EACL},
+            abbr={EACL},
+            year={2021},
+            url={https://arxiv.org/abs/2102.00086},
+            code={https://github.com/XuhuiZhou/Toxic_Debias}
+}
+
 @inproceedings{swayamdipta2020datamaps,
     title     = {Dataset Cartography: Mapping and Diagnosing Datasets with Training Dynamics},
     author    = {Swabha Swayamdipta and Roy Schwartz and Nicholas Lourie and Yizhong Wang and Hannaneh Hajishirzi and Noah A. Smith and Yejin Choi},
