--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,18 @@
 ---
 ---
+@misc{pillutla2021mauve,
+    title={MAUVE: Human-Machine Divergence Curves for Evaluating Open-Ended Text Generation},
+    author={Krishna Pillutla and Swabha Swayamdipta and Rowan Zellers and John Thickstun and Yejin Choi and Zaid Harchaoui},
+    year={2021},
+    eprint={2102.01454},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    abbr      = {arXiv},
+    url={https://arxiv.org/abs/2102.01454}
+}
 
 @inproceedings{Zhou2021ToxicDebias,
-            author={Xuhui Zhou, Maarten Sap, Swabha Swayamdipta, Noah A. Smith and Yejin Choi},
+            author={Xuhui Zhou and Maarten Sap and Swabha Swayamdipta and Noah A. Smith and Yejin Choi},
             title={Challenges in Automated Debiasing for Toxic Language Detection},
             booktitle={EACL},
             abbr={EACL},
