--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,16 @@
 ---
 ---
+@misc{jacovi2021contrastive,
+      title={Contrastive Explanations for Model Interpretability},
+      author={Alon Jacovi and Swabha Swayamdipta and Shauli Ravfogel and Yanai Elazar and Yejin Choi and Yoav Goldberg},
+      year={2021},
+      eprint={2103.01378},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      abbr      = {arXiv},
+      url={https://arxiv.org/abs/2103.01378}
+}
+
 @misc{pillutla2021mauve,
     title={MAUVE: Human-Machine Divergence Curves for Evaluating Open-Ended Text Generation},
     author={Krishna Pillutla and Swabha Swayamdipta and Rowan Zellers and John Thickstun and Yejin Choi and Zaid Harchaoui},
