--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@inproceedings{liu2021onthefly,
+    title={On-the-Fly Controlled Text Generation with Experts and Anti-Experts},
+    author={Alisa Liu and Maarten Sap and Ximing Lu and Swabha Swayamdipta and Chandra Bhagavatula and Noah A. Smith and Yejin Choi},
+    year={2021},
+    url={https://arxiv.org/abs/2105.03023},
+    booktitle={ACL},
+    abbr={ACL}
+}
+
 @misc{jacovi2021contrastive,
       title={Contrastive Explanations for Model Interpretability},
       author={Alon Jacovi and Swabha Swayamdipta and Shauli Ravfogel and Yanai Elazar and Yejin Choi and Yoav Goldberg},
